# selenium-canvas-example

./: .gitignore  README.adoc  pyproject.toml  requirements.txt
libs/: canvas.py  page.py
tests/: conftest.py  test_calculator.py
tests/lib/: page.py  utils.py
tests/lib/canvas/: dom.py  webelement.py
